# policypay

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
app/src/: server.test.ts  server.ts
app/static/: dashboard.html
demo/: DEMO_SCRIPT.md  VIDEO_GUIDE.md  live_demo.sh
docs/: 01_project_recommendation.md  02_architecture.md  03_requirements_vision_and_final_form.md  04_development_checklist.md  05_implementation_plan.md  architecture.md  delivery-plan.md  tech-stack-and-product-roadmap.md
docs/guides/: anchor-test-stability.md  quickstart.md  usage.md
examples/: README.md
modules/agent-adapter/src/: index.ts
modules/agent-adapter/tests/: index.test.ts
modules/domain/: contract.json
modules/domain/src/: index.ts
modules/domain/tests/: index.test.ts
programs/demo1/: Cargo.toml
programs/demo1/src/: lib.rs
programs/policy_pay/: Cargo.toml
programs/policy_pay/src/: constants.rs  errors.rs  lib.rs  state.rs
scripts/: anchor-test-safe.sh
services/control-plane/src/: app.ts  audit-log-store.ts  config.ts  index.ts  policy-pay-client.ts  server.ts  types.ts
services/control-plane/tests/: app.test.ts  audit-log-store.test.ts
services/indexer/src/: app.ts  config.ts  server.ts  service.ts  timeline-store.ts
services/indexer/tests/: app.test.ts  service.test.ts
services/policypay-api-rs/: Cargo.toml
services/policypay-api-rs/src/: chain_client.rs  domain.rs  main.rs
services/relayer/src/: app.ts  config.ts  server.ts  service.ts  store.ts
services/relayer/tests/: app.test.ts  service.test.ts
tests/: demo1.ts  policy_pay.ts
tests/offchain/: e2e-workflow.test.ts
