[workspace]
members = [
    "programs/*",
    "services/policypay-api-rs"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "1.0.0"
anyhow = "1"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
solana-commitment-config = "3.1.1"
solana-keypair = "3.1.2"
solana-program-pack = "3.1.0"
solana-rpc-client = "3.1.12"
solana-signer = "3.0.0"
solana-transaction = "3.1.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
