[package]
name = "policypay-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anchor-lang = { workspace = true }
policy_pay = { path = "../../programs/policy_pay", features = ["no-entrypoint"] }
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-program-pack = { workspace = true }
solana-rpc-client = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }
